tests/ui/entry-point/auxiliary/bad_main_functions.rs
pub fn boilerplate(x: u8) {}
//~^ ERROR: `main` function has wrong type [E0580]
